linera-views-derive/src/snapshots/linera_views_derive__tests__generate_clonable_view_code-2.snap
---
source: linera-views-derive/src/lib.rs
expression: pretty(generate_clonable_view_code(input))
---
impl<C, MyParam> linera_views::views::ClonableView<C> for TestView<C, MyParam>
where
    C: linera_views::context::Context + Send + Sync + Clone + 'static,
{
    fn clone_unchecked(&mut self) -> Result<Self, linera_views::views::ViewError> {
        Ok(Self {
            register: self.register.clone_unchecked()?,
            ignored: self.ignored.clone_unchecked()?,
            collection: self.collection.clone_unchecked()?,
        })
    }
}
