linera-views-derive/src/snapshots/linera_views_derive__tests__generate_clonable_view_code-3.snap
---
source: linera-views-derive/src/lib.rs
expression: pretty(generate_clonable_view_code(input))
---
impl linera_views::views::ClonableView<CustomContext> for TestView
where
    RegisterView<CustomContext, usize>: ClonableView<CustomContext>,
    CollectionView<
        CustomContext,
        usize,
        RegisterView<CustomContext, usize>,
    >: ClonableView<CustomContext>,
    Self: Send + Sync,
{
    fn clone_unchecked(&mut self) -> Result<Self, linera_views::ViewError> {
        Ok(Self {
            register: self.register.clone_unchecked()?,
            collection: self.collection.clone_unchecked()?,
        })
    }
}
