linera-views-derive/src/snapshots/linera_views_derive__tests__generate_clonable_view_code-5.snap
---
source: linera-views-derive/src/lib.rs
expression: pretty(generate_clonable_view_code(input))
---
impl linera_views::views::ClonableView for TestView
where
    RegisterView<custom::path::to::ContextType, usize>: ClonableView,
    CollectionView<
        custom::path::to::ContextType,
        usize,
        RegisterView<custom::path::to::ContextType, usize>,
    >: ClonableView,
    Self: Send + Sync,
{
    fn clone_unchecked(&mut self) -> Result<Self, linera_views::ViewError> {
        Ok(Self {
            register: self.register.clone_unchecked()?,
            collection: self.collection.clone_unchecked()?,
        })
    }
}
