linera-views-derive/src/snapshots/linera_views_derive__tests__generate_clonable_view_code-6.snap
---
source: linera-views-derive/src/lib.rs
expression: pretty(generate_clonable_view_code(input))
---
impl<MyParam> linera_views::views::ClonableView for TestView<MyParam>
where
    MyParam: Send + Sync + 'static,
    RegisterView<custom::path::to::ContextType, usize>: ClonableView,
    CollectionView<
        custom::path::to::ContextType,
        usize,
        RegisterView<custom::path::to::ContextType, usize>,
    >: ClonableView,
    Self: linera_views::views::View + Sync,
{
    fn clone_unchecked(&mut self) -> Result<Self, linera_views::ViewError> {
        Ok(Self {
            register: self.register.clone_unchecked()?,
            collection: self.collection.clone_unchecked()?,
        })
    }
}
